Fix footer social logos alignment for mobile

--- a/src/ui/styles/main-footer.scss
+++ b/src/ui/styles/main-footer.scss
@@ -138,6 +138,13 @@
   opacity: 0.7
 }
 
+@media screen and (max-width: 53.75rem) {
+  .footer .footer-social a:first-child {
+    margin-left: 0;
+  }
+}
+
+
 .footer .footer-social a:hover {
   color: #dd6a58;
   opacity: 1
